Task-75 Work on getting Python API working with JS calls

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -7,7 +7,9 @@
     <title>J-Initiative Web Scraper</title>
     <link rel='stylesheet' type='text/css' media='screen' href='../renderer/css/style.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../node_modules/bootstrap/dist/css/bootstrap.css'>
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src='../node_modules/jquery/dist/jquery.js'></script>
+    <script type="module" src="../js_to_py_comms.js">
+    </script>
     <script>
         // Psuedo-enum object used for organization and control of page state
         const Pages = {
@@ -130,8 +132,5 @@
         </script>
     </div>
     <script src='../node_modules/bootstrap/dist/js/bootstrap.bundle.js'></script>
-    <script>
-        console.log()
-    </script>
 </body>
 </html>
