task#78 ready for testing

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -113,6 +113,13 @@
             localStorage.setItem('theme', theme);
         }
     </script>
+
+    <style>
+        /* Custom style for Theme Select dropdown to keep a constant size */
+        #theme-select {
+            width: 150px; /* Fixed width for the dropdown */
+        }
+    </style>
 </head>
 
 <body>
@@ -123,7 +130,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!-- Navigation Links for Home, Scraper, About, and Exit -->
+                <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" id="home-nav" onclick="changePage(this)" href="#">Home</a>
                     </li>
@@ -133,20 +141,20 @@
                     <li class="nav-item">
                         <a class="nav-link" id="about-nav" onclick="changePage(this)" href="#">About</a>
                     </li>
-                </ul>
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <!-- Theme Select Dropdown for user to choose the theme -->
                     <li class="nav-item">
-                        <label for="theme-select" class="form-label me-2">Theme:</label>
-                        <select id="theme-select" class="form-select form-select-sm me-3" onchange="changeTheme()">
+                        <a class="nav-link" id="exit-nav" onclick="exitApp()" href="#">Exit</a>
+                    </li>
+                </ul>
+
+                <!-- Theme Selector Dropdown aligned to the far right -->
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <select id="theme-select" class="form-select form-select-sm" onchange="changeTheme()">
                             <option value="light-theme">Light Theme</option>
                             <option value="dark-theme">Dark Theme</option>
                             <option value="blue-theme">Blue Theme</option>
                             <option value="disco-theme">Disco Theme</option>
                         </select>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="exit-nav" onclick="exitApp()" href="#">Exit</a>
                     </li>
                 </ul>
             </div>
