Task-96 Update JS files to add javadoc style headers and also tweak some method exception handling

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -61,10 +61,9 @@
         </div>
     </nav>
     <div id="d_content" class="container-fluid mt-4">
-        <!-- The home component loads by default -->
+        <!-- Each of the pages are loaded as individual components to separate the html -->
     </div>
     
-
     <!-- Bootstrap JS Bundle -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
