Task-127 Implement a functional page for hosting the label studio embedded web page

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -10,6 +10,7 @@
         default-src 'self';
         script-src 'self';
         connect-src 'self';
+        frame-src https://dlsmallw-test.hf.space;
         img-src 'self' data:;
         style-src 'self' 'unsafe-inline';">
 
@@ -37,6 +38,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="scrape-nav" href="#">Scraper</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="annotation-nav" href="#">Annotation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="about-nav" href="#">About</a>
