added electron-log, logger.js, and some log statements

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -159,8 +159,12 @@
         <!-- The home component loads by default -->
     </div>
 
+    <!-- jQuery -->
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- Bootstrap JS Bundle -->
-    <script src='../node_modules/bootstrap/dist/js/bootstrap.bundle.js'></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!-- Your renderer script -->
+    <script src="js/renderer.js"></script>
 </body>
 
 </html>
