--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -24,15 +24,15 @@
     <script src="../renderer/js/renderer.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark draggable">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Web Scraper</span>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <button class="navbar-toggler not-draggable" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Navigation Links -->
-                <ul class="navbar-nav mb-0">
+                <ul class="navbar-nav mb-0 not-draggable">
                     <li class="nav-item">
                         <a class="nav-link" id="home-nav" href="#">Home</a>
                     </li>
@@ -48,7 +48,7 @@
                 </ul>
 
                 <!-- Theme Selector and Exit aligned to the right -->
-                <ul class="navbar-nav ms-auto mb-0">
+                <ul class="navbar-nav ms-auto mb-0 not-draggable">
                     <li class="nav-item">
                         <select id="theme-select" class="form-select form-select-sm">
                             <option value="light-theme">Light Theme</option>
