--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -16,12 +16,8 @@
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../renderer/css/style.css">
-
-    <!-- jQuery -->
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <!-- Include renderer.js -->
-    <script src="../renderer/js/renderer.js"></script>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
@@ -40,6 +36,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="about-nav" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="logs-nav" href="#">Logs</a>
                     </li>
                 </ul>
 
@@ -63,8 +62,13 @@
     <div id="d_content" class="container-fluid mt-4">
         <!-- Each of the pages are loaded as individual components to separate the html -->
     </div>
+     <!-- jQuery -->
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- Bootstrap JS Bundle -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <!-- Include renderer.js -->
+    <script src="../renderer/js/renderer.js"></script>
+    <script src="../renderer/js/logPage.js"></script>
 </body>
 </html>
 
