Revert "Task#109 suggestion"

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -131,6 +131,7 @@
         }
     </script>
 
+    
 </head>
 
 <body>
@@ -155,6 +156,7 @@
                     <li class="nav-item">
                         <a class="nav-link" id="logs-nav" onclick="changePage(this)" href="#">Logs</a>
                     </li>
+                    
                 </ul>
 
                 <!-- Theme Selector Dropdown aligned to the far right -->
@@ -177,13 +179,9 @@
     <div id="d_content" class="container-fluid mt-4">
         <!-- The home component loads by default -->
     </div>
-     <!-- jQuery -->
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+
     <!-- Bootstrap JS Bundle -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <!-- Include renderer.js -->
-    <script src="../renderer/js/renderer.js"></script>
-    <script src="../renderer/js/logPage.js"></script>
+    <script src='../node_modules/bootstrap/dist/js/bootstrap.bundle.js'></script>
 </body>
 
 </html>
