--- a/web-scraping-electron-app/renderer/assets/html/loadingscreen.html
+++ b/web-scraping-electron-app/renderer/assets/html/loadingscreen.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style = align:center>
-.loader {
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 150px;
-  height: 150px;
-  position: fixed;
-  top:-100%; right:-100%; left:-100%; bottom:-100%;
-  margin:auto;
-  z-index:0;
-  -webkit-animation: spin 2s linear infinite; 
-  animation: spin 2s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading Screen</title>
+    <link rel="stylesheet" href="../../css/style.css"> <!-- Link to the CSS file -->
 </head>
 <body>
 
-<div class="loader"></div>
+    <div class="loader"></div>
 
 </body>
 </html>
+
+
