--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self';
         script-src 'self';
-        connect-src 'self';
-        frame-src https://dlsmallw-test.hf.space;
+        connect-src 'self' * 'unsafe-inline' 'unsafe-eval';
+        frame-src * 'unsafe-inline' 'unsafe-eval';
         img-src 'self' data:;
         style-src 'self' 'unsafe-inline';">
 
