Still a couple errors after merging. Will continue to debug tonight as much as I can.

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -18,6 +18,11 @@
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../renderer/css/style.css">
+
+    <!-- jQuery -->
+    <script src='../node_modules/jquery/dist/jquery.js'></script>
+
+    <script src='../renderer/js/initializePage.js'></script>
 </head>
 
 <body>
