Added additional logging. This branch should be done

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -20,7 +20,7 @@
     <!-- jQuery -->
     <script src='../node_modules/jquery/dist/jquery.js'></script>
 
-    <script src='../renderer/js/initializePage.js'></script>
+    <!--<script src='../renderer/js/initializePage.js'></script>-->
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <!-- Include renderer.js -->
     <script src="../renderer/js/renderer.js"></script>
-    <script src="../renderer/js/logPage.js"></script>
+    <!--<script src="../renderer/js/logPage.js"></script>-->
 </body>
 </html>
 
