Task-132 Update style.css to make Label Studio UI look and feel better

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -33,16 +33,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <!-- Navigation Links -->
                 <ul class="navbar-nav mb-0 not-draggable">
-                    <li class="nav-item">
+                    <li class="nav-item" id="home">
                         <a class="nav-link" id="home-nav" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="scrape">
                         <a class="nav-link" id="scrape-nav" href="#">Scraper</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="annotation">
                         <a class="nav-link" id="annotation-nav" href="#">Annotation</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="about">
                         <a class="nav-link" id="about-nav" href="#">About</a>
                     </li>
                 </ul>
