Updated to bring into line with US-98

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -16,11 +16,6 @@
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../renderer/css/style.css">
-
-    <!-- jQuery -->
-    <script src='../node_modules/jquery/dist/jquery.js'></script>
-
-    <!--<script src='../renderer/js/initializePage.js'></script>-->
 </head>
 
 <body>
@@ -73,6 +68,8 @@
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <!-- Include renderer.js -->
     <script src="../renderer/js/renderer.js"></script>
+
+    <!-- This generates a "File not found" error for me -->
     <!--<script src="../renderer/js/logPage.js"></script>-->
 </body>
 </html>
