Task-128 Update index.html to make navbar fixed to the top

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -24,7 +24,7 @@
     <script src="../renderer/js/renderer.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark draggable">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">Web Scraper</span>
             <button class="navbar-toggler not-draggable" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
