--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -21,6 +21,7 @@
     <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- Include renderer.js -->
     <script src="../renderer/js/renderer.js"></script>
+    <script src="../renderer/js/rightClick.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark">
