--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>J-Initiative Web Scraper</title>
 
-<!--default-src 'self'; script-src 'self'; -->
+<!-- -->
      <!-- Content Security Policy  -->
     <meta http-equiv="Content-Security-Policy" content="
-        
-        
+        default-src 'self'; 
+        script-src 'self';
         connect-src 'self';
         img-src 'self' data:;
         style-src 'self' 'unsafe-inline';">
