--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -39,6 +39,9 @@
                         <a class="nav-link" id="scrape-nav" href="#">Scraper</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" id="database-nav" href="#">Database</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" id="about-nav" href="#">About</a>
                     </li>
                 </ul>
