Right click menu is functional in Scraper window

--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -65,6 +65,9 @@
     <div id="d_content" class="container-fluid mt-4">
         <!-- Each of the pages are loaded as individual components to separate the html -->
     </div>
+    <div id="rightClickMenu" class="hideMenu">
+        <a>Send Highlighted Text</a>
+    </div>
     
     <!-- Bootstrap JS Bundle -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
