--- a/web-scraping-electron-app/renderer/window-templates/scrape-window.html
+++ b/web-scraping-electron-app/renderer/window-templates/scrape-window.html
@@ -22,10 +22,11 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
+        <span class="navbar-brand mb-0 h1">Web Scraper</span>
         <div class="container-fluid">
             <ul class="navbar-nav ms-auto mb-0 not-draggable" id="navbar-ul-2">
                 <li class="nav-item">
-                    <a class="nav-link" id="exit-scrape-win-btn" href="#">Return to Application</a>
+                    <a class="nav-link" id="exit-scrape-win-btn" href="#">Close Window</a>
                 </li>
             </ul>
         </div>
