Task-217 Reimplemented the scrape tab 'toggle' button to be more in line with a standard toggle style button

--- a/web-scraping-electron-app/renderer/window-templates/scrape-window.html
+++ b/web-scraping-electron-app/renderer/window-templates/scrape-window.html
@@ -46,7 +46,7 @@
                 <li class="nav-item">
                     <div id="scrape-mode-toggle-container" class="toggle">
                         <input id="text-sel-toggle" class="toggle__checkbox" type="checkbox">
-                        <label for="text-sel-toggle" class="toggle__label"></label>
+                        <label id="text-sel-toggle-lbl" for="text-sel-toggle" class="toggle__label"></label>
                     </div>
                 </li>
                 <li class="nav-item">
