--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -7,19 +7,24 @@
 
      <!-- Content Security Policy  -->
     <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self';
-        connect-src 'self' * 'unsafe-inline' 'unsafe-eval';
-        frame-src * 'unsafe-inline' 'unsafe-eval';
-        img-src 'self' data:;
-        style-src 'self' 'unsafe-inline';">
+    default-src 'self';
+    script-src 'self' 'unsafe-inline';
+    connect-src 'self' ws://localhost:* http://localhost:*;
+    frame-src 'self';
+    img-src 'self' data:;
+    style-src 'self' 'unsafe-inline';
+">
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../renderer/css/style.css">
 
     <!-- jQuery -->
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script type="module">
+    import $ from 'jquery';
+    window.$ = window.jQuery = $;
+    </script>
+
 </head>
 
 <body>
@@ -56,7 +61,9 @@
         <!-- Each of the pages are loaded as individual components to separate the html -->
     </div>
     <!-- Bootstrap JS Bundle -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script type="module">
+    import 'bootstrap/dist/js/bootstrap.bundle.js';
+    </script>
     <!-- Include renderer.js -->
     <script type="module" src="../renderer/js/renderer.js"></script>
 </body>
