--- a/web-scraping-electron-app/renderer/index.html
+++ b/web-scraping-electron-app/renderer/index.html
@@ -1,64 +1,82 @@
+<!-- vite-demo/index.html -->
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>J-Initiative Web Scraper</title>
 
-     <!-- Content Security Policy  -->
-    <meta http-equiv="Content-Security-Policy" content="
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
         default-src 'self';
         script-src 'self';
         connect-src 'self' * 'unsafe-inline' 'unsafe-eval';
         frame-src * 'unsafe-inline' 'unsafe-eval';
         img-src 'self' data:;
-        style-src 'self' 'unsafe-inline';">
+        style-src 'self' 'unsafe-inline';"
+    />
 
-    <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../renderer/css/style.css">
+    <!-- Instead of referencing node_modules directly,
+         consider installing bootstrap + jQuery in your Vite project
+         and either importing them in your JS or referencing via a CDN. -->
+    <!-- e.g. to do a quick test, you could do: -->
+    <!--
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    -->
 
-    <!-- jQuery -->
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
-</head>
+    <!-- If you want to use your local style, you can keep this or import from JS -->
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Web Scraper</span>
-            <button class="navbar-toggler not-draggable" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <!-- Navigation Links -->
-                <ul class="navbar-nav mb-0 not-draggable" id="navbar-ul-1">
-                    
-                </ul>
-
-                <!-- Theme Selector and Exit aligned to the right -->
-                <ul class="navbar-nav ms-auto mb-0 not-draggable" id="navbar-ul-2">
-                    <li class="nav-item">
-                        <select id="theme-select" class="form-select form-select-sm">
-                            <option value="light-theme">Light Theme</option>
-                            <option value="dark-theme">Dark Theme</option>
-                            <option value="blue-theme">Blue Theme</option>
-                            <option value="disco-theme">Disco Theme</option>
-                        </select>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="exit-nav" href="#">Exit</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">Web Scraper</span>
+        <button
+          class="navbar-toggler not-draggable"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mb-0 not-draggable" id="navbar-ul-1"></ul>
+          <ul class="navbar-nav ms-auto mb-0 not-draggable" id="navbar-ul-2">
+            <li class="nav-item">
+              <select id="theme-select" class="form-select form-select-sm">
+                <option value="light-theme">Light Theme</option>
+                <option value="dark-theme">Dark Theme</option>
+                <option value="blue-theme">Blue Theme</option>
+                <option value="disco-theme">Disco Theme</option>
+              </select>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="exit-nav" href="#">Exit</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
+
     <div id="d_content" class="container-fluid mt-4">
-        <!-- Each of the pages are loaded as individual components to separate the html -->
+      <!-- If you're using React,
+           place a <div id="root"></div> or something
+           to mount your React content. -->
+      <div id="root"></div>
     </div>
-    <!-- Bootstrap JS Bundle -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <!-- Include renderer.js -->
-    <script type="module" src="../renderer/js/renderer.js"></script>
-</body>
+
+    <!-- If you want local bootstrap JS or jQuery,
+         you might reference them or import from your main.jsx. -->
+
+    <!-- Vite will inject your React build here automatically -->
+    <!-- or you can <script type="module" src="/src/main.jsx"></script> -->
+
+  </body>
 </html>
+
 
