--- a/frontend/window-templates/anno-window.html
+++ b/frontend/window-templates/anno-window.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <!-- jQuery -->
     <script src="../../node_modules/jquery/dist/jquery.js"></script>
-    <!-- Include renderer.js -->
+    <!-- Include frontend.js -->
     <script src="./js/annotation-webview-renderer.js"></script>
 </head>
 <body>
