--- a/web-scraping-electron-app/public/index.html
+++ b/web-scraping-electron-app/public/index.html
@@ -16,7 +16,7 @@
 
     <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../renderer/css/style.css">
+    <link rel="stylesheet" href="../frontend/css/style.css">
 
     <!-- jQuery -->
     <script src="../node_modules/jquery/dist/jquery.js"></script>
@@ -58,7 +58,7 @@
     <!-- Bootstrap JS Bundle -->
     <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <!-- Include renderer.js -->
-    <script type="module" src="../renderer/js/renderer.js"></script>
+    <script type="module" src="../frontend/js/renderer.js"></script>
 </body>
 </html>
 
