worked through path issues and updated J-Initiative-Web-Scraper/README.md

--- a/web-scraping-electron-app/src/frontend/public/index.html
+++ b/web-scraping-electron-app/src/frontend/public/index.html
@@ -15,11 +15,11 @@
         style-src 'self' 'unsafe-inline';">
 
     <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../frontend/css/style.css">
+    <link rel="stylesheet" href="../../../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <!-- jQuery -->
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+     <script src="../../../node_modules/jquery/dist/jquery.js"></script>
 </head>
 
 <body>
@@ -56,9 +56,9 @@
         <!-- Each of the pages are loaded as individual components to separate the html -->
     </div>
     <!-- Bootstrap JS Bundle -->
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="../../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <!-- Include renderer.js -->
-    <script type="module" src="../frontend/js/renderer.js"></script>
+    <script type="module" src="../js/renderer.js"></script>
 </body>
 </html>
 
