--- a/web-scraping-electron-app/renderer/window-templates/anno-window.html
+++ b/web-scraping-electron-app/renderer/window-templates/anno-window.html
@@ -1,43 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Content Security Policy -->
-    <meta http-equiv="Content-Security-Policy" content="
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
         default-src 'self';
         script-src 'self';
         connect-src 'self' * 'unsafe-inline' 'unsafe-eval';
         frame-src * 'unsafe-inline' 'unsafe-eval';
         img-src 'self' data:;
         style-src 'self' 'unsafe-inline';
-    ">
+    "
+    />
     <!-- CSS Stylesheets -->
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <!-- jQuery -->
     <script src="../../node_modules/jquery/dist/jquery.js"></script>
     <!-- Include renderer.js -->
     <script src="./js/annotation-webview-renderer.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top draggable">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Label Studio</span>
-            <ul class="navbar-nav ms-auto mb-0 not-draggable">
-                <li class="nav-item">
-                    <a class="nav-link" id="exit-anno-win-btn" href="#">Close Window</a>
-                </li>
-            </ul>
-        </div>
+      <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1">Label Studio</span>
+        <ul class="navbar-nav ms-auto mb-0 not-draggable">
+          <li class="nav-item">
+            <a class="nav-link" id="exit-anno-win-btn" href="#">Close Window</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    
+
     <div id="anno-container" class="content-container">
-        <div id="anno-webview" class="webview-container">
-            <webview id="anno-element" class="webview-element"></webview>
-        </div>
+      <div id="anno-webview" class="webview-container">
+        <webview id="anno-element" class="webview-element"></webview>
+      </div>
     </div>
     <!-- Bootstrap JS Bundle -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-</body>
+  </body>
 </html>
